Added commands for spawning items and enemies. Made a generic implementation of scrollable windows via ViewContainers with ScrollBars.