@@ -3,13 +3,12 @@ package dev.ipsych0.myrinnia.chatwindow;
 import dev.ipsych0.myrinnia.Handler;
 import dev.ipsych0.myrinnia.devtools.DevToolUI;
 import dev.ipsych0.myrinnia.gfx.Assets;
-import dev.ipsych0.myrinnia.ui.ScrollBar;
+import dev.ipsych0.myrinnia.ui.ViewContainer;
 import dev.ipsych0.myrinnia.utils.Text;
 
 import java.awt.*;
 import java.io.Serializable;
 import java.time.LocalDateTime;
-import java.util.List;
 import java.util.*;
 
 public class ChatWindow implements Serializable {
@@ -28,13 +27,10 @@ public class ChatWindow implements Serializable {
     private static final int MESSAGE_PER_VIEW = 7;
     private static final int MAX_MESSAGES = 35;
     private Rectangle windowBounds;
-    private ScrollBar scrollBar;
+    private ViewContainer<TextSlot> view;
     private Set<Filter> filters;
 
-    private LinkedList<TextSlot> textSlots;
-
     public ChatWindow() {
-        this.textSlots = new LinkedList<>();
         this.width = TextSlot.textWidth;
         this.height = MESSAGE_PER_VIEW * TextSlot.textHeight;
         this.x = 8;
@@ -46,7 +42,11 @@ public class ChatWindow implements Serializable {
         this.filters.addAll(filters);
 
         windowBounds = new Rectangle(x, y, width, height);
-        scrollBar = new ScrollBar(x + width - 24, y + 4, 16, height, 0, MESSAGE_PER_VIEW, windowBounds, true);
+
+        view = new ViewContainer.Builder<>(new Rectangle(x, y, width, height), new ArrayList<TextSlot>())
+                .withOrientation(ViewContainer.VERTICAL)
+                .andScrollBar(MESSAGE_PER_VIEW, new Rectangle(x + width - 24, y + 4, 16, height), true)
+                .build();
     }
 
     public void tick() {
@@ -56,20 +56,7 @@ public class ChatWindow implements Serializable {
         }
 
         if (chatIsOpen) {
-
-            scrollBar.tick();
-
-            if (scrollBar.hasScrolledUp()) {
-                for (int i = 0; i < scrollBar.getScrollMaximum(); i++) {
-                    textSlots.get(i).setY(textSlots.get(i).getY() - TextSlot.textHeight);
-                }
-                scrollBar.setScrolledUp(false);
-            } else if (scrollBar.hasScrolledDown()) {
-                for (int i = 0; i < scrollBar.getScrollMaximum(); i++) {
-                    textSlots.get(i).setY(textSlots.get(i).getY() + TextSlot.textHeight);
-                }
-                scrollBar.setScrolledDown(false);
-            }
+            view.tick();
         }
     }
 
@@ -92,17 +79,7 @@ public class ChatWindow implements Serializable {
 
             Text.drawString(g, Handler.get().getPlayer().getZone().getName(), x + (width / 2), y - 9, true, Color.YELLOW, Assets.font14);
 
-            scrollBar.render(g);
-
-            if (textSlots.size() > 7 && textSlots.size() <= 35) {
-                for (int i = scrollBar.getIndex(); i < MESSAGE_PER_VIEW + scrollBar.getIndex(); i++) {
-                    textSlots.get(i).render(g);
-                }
-            } else if (textSlots.size() > 0 && textSlots.size() <= 7) {
-                for (int i = 0; i < textSlots.size(); i++) {
-                    textSlots.get(i).render(g);
-                }
-            }
+            view.render(g);
 
             g.setComposite(current);
         }
@@ -115,35 +92,30 @@ public class ChatWindow implements Serializable {
         if (filter != null && !filters.contains(filter)) {
             return false;
         }
-        int offSet = 0;
         // If the chat is full, remove the first element (FIFO)
-        if (textSlots.size() == MAX_MESSAGES) {
-            textSlots.removeLast();
-            // The Y-offset for the new slot based on the current scroll index
-            offSet = scrollBar.getIndex();
-        }
-        // When a new message is added, move up all existing slots by 1 slotsize
-        for (TextSlot ts : textSlots) {
-            ts.setY(ts.getY() - TextSlot.textHeight);
+        if (view.getElements().size() == MAX_MESSAGES) {
+            view.getElements().remove(view.getElements().size() - 1);
         }
 
+        // When a new message is added, move up all existing slots by 1 slotsize
+        for (TextSlot ts : view.getElements()) {
+            ts.setLocation((int) ts.getX(), (int) ts.getY() - TextSlot.textHeight);
+        }
+
+        int size = view.getElements().size();
+        int yPos = size == 0 ? y + height - TextSlot.textHeight : view.getElements().get(0).y + 16;
         if (filters.contains(Filter.TIMESTAMP)) {
             // Add a timestamp (HH:mm format)
             LocalDateTime ldt = LocalDateTime.now();
             String timeStamp = ldt.toLocalTime().toString().substring(0, 5);
 
-            textSlots.addFirst(new TextSlot(x, y + height - TextSlot.textHeight + (offSet * TextSlot.textHeight),
+            view.getElements().add(0, new TextSlot(x, yPos,
                     "[" + timeStamp + "]: " + message));
         } else {
-            textSlots.addFirst(new TextSlot(x, y + height - TextSlot.textHeight + (offSet * TextSlot.textHeight), message));
+            view.getElements().add(0, new TextSlot(x, yPos, message));
         }
-        scrollBar.setListSize(textSlots.size());
-        scrollBar.setScrollMaximum(textSlots.size());
+        view.updateContents(view.getElements());
         return true;
-    }
-
-    private List<TextSlot> getTextSlots() {
-        return textSlots;
     }
 
     public Rectangle getWindowBounds() {
